# fortune-teller

./: .env.example  .gitignore  .gitmodules  README.md  VERSION  agent.md  app.py  bazi_utils.py  db_utils.py  debug_pdf.py  llm_client.py  logic.py  logic_old.py  main.py  pdf_generator.py  profiles.db  pyproject.toml  requirements.txt  test_api_speed.py  text_utils.py
fortune_teller_agent/: .env.example  .gitignore  app.py  bazi_utils.py  china_cities.py  logic.py  main.py  pdf_generator.py  requirements.txt
ios/FortuneTeller/: FortuneTellerApp.swift  Info.plist  ZodiacDetailView.swift  ZodiacUtils.swift
ios/FortuneTeller.xcodeproj/: project.pbxproj
ios/FortuneTeller/Models/: Models.swift  UserProfile.swift
ios/FortuneTeller/Network/: NetworkManager.swift
ios/FortuneTeller/ViewModels/: HomeViewModel.swift  ProfileManager.swift  ZodiacViewModel.swift
ios/FortuneTeller/Views/: BaziResultTabView.swift  BaziSelectionView.swift  ChartGridView.swift  ChatView.swift  ComingSoonView.swift  DashboardView.swift  DivinationView.swift  EnergyPieChartView.swift  FeatureButtonRow.swift  FeatureGridView.swift  FiveElementColor.swift  MainTabView.swift  MasterConsultationView.swift  MiniBarChartView.swift  PillarView.swift  ProfessionalChartView.swift  SingleInputView.swift  SuperDashboardCard.swift  TopNavBarView.swift  ZodiacView.swift
ios/FortuneTeller/Views/Profile/: FiveElementsRingView.swift  ProfileEditView.swift  ProfileHeaderView.swift  WelcomeCard.swift
tests/: test_import.py  test_prompt_tone.py
(+1 files in other folders)
