[project]
name = "fortune-teller-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lunar-python>=1.4.8",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
    "svgwrite>=1.4.3",
    "tavily-python>=0.5.0",
    "reportlab>=4.0.0",
]
